--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Mahrukh67.github.io/Github-finder",
   "name": "github-profile-finder",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^1.6.7",
+    "gh-pages": "^6.1.1",
     "netlify-cli": "^2.61.2",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^9.4.0",
@@ -16,6 +18,8 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
